[package]
name = "gedo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-std = "1.12.0"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
confy = "0.5.1"
dialoguer = "0.10.4"
directories = "5.0.0"
downloader = { version = "0.2.7", features = ["indicatif"] }
futures = "0.3.28"
indicatif = { version = "0.17.3", features = ["tokio"] }
once_cell = "1.17.1"
regex = "1.8.1"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
